added the ability to send assets

--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -358,7 +358,7 @@ and never kept on the blockchain.";
 "optional" = "Optional";
 "invalid_address_title" = "Invalid address";
 "invalid_address_text" = "The provided node address is invalid. Please, check if the entered address is correct";
-"insufficient_funds" = "Insufficient funds: you would need (value) beams to complete the transaction";
+"insufficient_funds" = "Insufficient funds: you would need (value) to complete the transaction";
 "downloading" = "Downloaded";
 "sent_to_own" = "Sent to own address";
 "sending_to_own" = "Sending to own address";
@@ -545,6 +545,7 @@ and never kept on the blockchain.";
 "unlinking_fee" = "Unlinking fee";
 "small_amount_unlink" = "Amount is too small. Minimal amount is";
 "remaining" = "Remaining";
+"remaining_beam" = "Remaining BEAM";
 "amount_to_unlink" = "Amount to unlink";
 "unlink_notice" = "Please notice that unlinking funds may take up to few days to proceed.";
 "change" = "Change";
