--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -435,7 +435,7 @@ and never kept on the blockchain.";
 "remaining_beam" = "Remaining BEAM";
 "change" = "Change";
 "change_locked" = "CHANGE\n(locked till the transaction will succeed or expire)";
-"wallet_id" = "Identity";
+"wallet_id" = "Signature";
 "one_time" = "One time";
 "permanent" = "Permanent";
 "reconnect" = "Reconnecting to another random node…";
@@ -443,7 +443,7 @@ and never kept on the blockchain.";
 "transaction_type" = "Transaction type";
 "type" = "Type";
 "address_type" = "Address type";
-"identity" = "Identity";
+"identity" = "Signature";
 "Address_expiration" = "Address expiration";
 "for_pool" = "For exchange or mining pool";
 "receive_notice_max_privacy" = "Max Privacy transaction can last at most 72 hours.\n\nMin transaction fee to send Max privacy coins\nis 0.01 BEAM.";
@@ -460,8 +460,8 @@ and never kept on the blockchain.";
 "public" = "public";
 "max_privacy" = "Max Privacy";
 "public_offline" = "Public offline";
-"sender_identity" = "Sender identity";
-"receiver_identity" = "Receiver identity";
+"sender_identity" = "Sender signature";
+"receiver_identity" = "Receiver signature";
 "tr_sent_public_offline" = "Transaction sent to public offline";
 "tr_sent_offline" = "Transaction sent to offline";
 "tr_received_public_offline" = "Transaction received from public offline";
@@ -581,3 +581,4 @@ and never kept on the blockchain.";
 "desc_paper" = "Description paper";
 "website" = "Website";
 "beam_conf_asset" = "Beam Confidential Asset";
+"show_utxo" = "Show UTXO";
