--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -144,7 +144,7 @@ and never kept on the blockchain.";
 "qr_code" = "QR code";
 "edit" = "Edit";
 "delete" = "Delete";
-"beams_send" = "Beams sent";
+"assets_sent" = "%@s sent";
 "undo" = "Undo";
 "cancelled" = "Cancelled";
 "delete_transaction_title" = "Delete transaction";
@@ -454,6 +454,7 @@ and never kept on the blockchain.";
 "shielded_pool" = "Shielded pool";
 "maturity" = "Maturity";
 "connect_node_offline_public" = "Connect to own node or enable mobile node in the settings to enable receiving public offline transactions";
+"connect_node_offline" = "Connect to own node or enable mobile node in the settings to enable receiving offline transactions";
 "public_offline_address_info" = "Publishing this address will allow you to be identified";
 "offline_address" = "Offline address";
 "show_public_offline" = "Show public offline address";
