--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -175,7 +175,7 @@ and never kept on the blockchain.";
 "confirm" = "Confirmation";
 "send_to" = "Send to";
 "amount_to_send" = "Amount to send";
-"send_notice" = "For the transaction to complete, the recipient must get online within the next 12 hours and you should get online within 2 hours afterwards.";
+"send_notice" = "The recipient must get online within the next\n12 hours and you should get online\nwithin 2 hours afterwards.";
 "save_address_title" = "Save address";
 "save_contact_title" = "Save contact";
 "save_address_text" = "Would you like to save created address and use it later?";
@@ -446,7 +446,7 @@ and never kept on the blockchain.";
 "identity" = "Signature";
 "Address_expiration" = "Address expiration";
 "for_pool" = "For exchange or mining pool";
-"receive_notice_max_privacy" = "Max Privacy transaction can last at most 72 hours.\n\nMin transaction fee to send Max privacy coins\nis 0.01 BEAM.";
+"receive_notice_max_privacy" = "Max Privacy transaction can last at most 72 hours.\n\nMin transaction fee to send maximum anonymity coins is 0.01 BEAM.";
 "withdraw" = "Withdraw";
 "withdraw_cofirm" = "Please confirm the withdrawal.\nStay online until funds arrive.\n\nTHE TRANSACTION WILL BE SENT WITHIN 5 MINUTES.";
 "confirm_2" = "Confirm";
@@ -454,9 +454,10 @@ and never kept on the blockchain.";
 "shielded_pool" = "Shielded pool";
 "maturity" = "Maturity";
 "connect_node_offline_public" = "Connect to own node or enable mobile node in the settings to enable receiving public offline transactions";
-"connect_node_offline" = "Connect to own node or enable mobile node in the settings to enable receiving offline transactions";
+"connect_node_offline" = "Connect to own node or enable mobile node in the settings to enable receiving max privacy transactions";
 "public_offline_address_info" = "Publishing this address will allow you to be identified";
 "offline_address" = "Offline address";
+"online_address" = "Online address";
 "show_public_offline" = "Show public offline address";
 "public" = "public";
 "max_privacy" = "Max Privacy";
@@ -583,3 +584,24 @@ and never kept on the blockchain.";
 "website" = "Website";
 "beam_conf_asset" = "Beam Confidential Asset";
 "show_utxo" = "Show UTXO";
+"maximum_anonymity_set" = "Maximum anonymity set";
+"maximum_anonymity" = "Maximum anonymity";
+"maximum_anonymity_address" = "Maximum anonymity address";
+"max_anonymity_address" = "Max anonymity";
+"copy_address_close" = "Copy address and close";
+"about_sbbs" = "Regular address include both\nonline and offline addresses.";
+"online_sbbs_address" = "Online (SBBS) address";
+"send_offline_hint" = "Make sure the address is correct as offline\ntransactions cannot be canceled.";
+"send_max_privacy_title" = "Guarantees maximum anonymity set of up to 64K.";
+"send_notice_max_privacy" = "Transaction can last at most 72 hours.";
+"transaction_indefinitely" = "Transaction can last indefinitely.";
+"transaction_time" = "Transaction can last at most %@.";
+"advanced" = "Advanced";
+"receive_description" = "Sender will be given a choice between regular and offline payment.\n\nFor online payment to complete, you should get online during 12 hours after coins are sent.";
+"max_privacy_fee" = "Min transaction fee to send maximum\nanonymity coins is 0.01 BEAM.";
+"offline_left_address" = "Offline address: %d transactions left.";
+"offline_left_address_warning" = "Offline address: %d transactions left. Ask receiver to come online to support more offline transactions.";
+"online_new_status" = "online: connected node supports online transactions only";
+"remote_node_hint" = "To support maximum anonymity set and offline\ntransactions please connect to mobile node\nor own node configured with your owner key.";
+"receive_description_2" = "For online payment to complete, you should get online during 12 hours after coins are sent.";
+"only_online_support" = "You are currently connected to the node\nthat supports only online transactions.";
