CA - confirmation withdraw

--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -459,6 +459,7 @@ and never kept on the blockchain.";
 "confirm_2" = "Confirm";
 "sbbs_address" = "SBBS Address";
 "shielded_pool" = "Shielded pool";
+"shielded" = "Shielded";
 "maturity" = "Maturity";
 "connect_node_offline_public" = "Connect to own node or enable mobile node in the settings to enable receiving public offline transactions";
 "connect_node_offline" = "Connect to own node or enable mobile node in the settings to enable receiving max privacy transactions";
@@ -639,7 +640,7 @@ and never kept on the blockchain.";
 "code" = "Code";
 "rate_transaction" = "Calculated with the exchange rate at the time of the transaction";
 "rate_transaction_not_available" = "%@ exchange rate was not available at the time of the transaction";
-"desc" = "Description"; //USD
+"desc" = "Description"; 
 "no_limit_with_hint" = "No limit (transaction can last indefinitely)";
 "dapp_transaction_completed" = "DApp transaction completed";
 "dapp_transaction_failed" = "DApp transaction failed";
@@ -670,3 +671,6 @@ and never kept on the blockchain.";
 "dapp_not_found_title" = "DAPP not found";
 "dapp_not_found_text" = "DAPP has been removed";
 "conf_asset_id" = "Confidential asset ID";
+"sender_wallet_signature" = "Sender's wallet signature";
+"receiver_wallet_signature" = "Receiver's wallet signature";
+"no_funds_dao" = "There is not enough funds to complete the transaction";
