--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -563,7 +563,7 @@ and never kept on the blockchain.";
 "fast_secure_advance" = "Fast and secure, advanced";
 "own_node_text" = "For those who run a node configured with the wallet’s Owner Key.";
 "connect_to_mobilenode" = "Connecting to Mobile node";
-"syncing_with_blockchain" = "Syncing  with blockchain";
+"syncing_with_blockchain" = "Syncing with the blockchain: ";
 "please_no_lock" = "Please do not lock your phone and do not close the wallet.";
 "wallet_connected_to_mobile_node" = "Wallet connected to Mobile node";
 "disconnect" = "Disconnect";
@@ -677,3 +677,6 @@ and never kept on the blockchain.";
 "beam_faucet" = "Beam Faucet";
 "beam_gallery" = "NFT Gallery";
 "no_search_transactions" = "There are no transactions\nmatching search criteria";
+"calc_estimate_time" = "Calculating estimate time";
+"to_completion" = " to completion";
+"to_completion_minute" = "less than a minute to completion";
