--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -611,6 +611,7 @@ and never kept on the blockchain.";
 "offline_left_address" = "Offline address: %d transactions left.";
 "offline_left_address_warning" = "Offline address: %d transactions left. Ask receiver to come online to support more offline transactions.";
 "online_new_status" = "online: random node supports online transactions only";
+"online_own_not_conifg" = "online: configure your own node with owner key";
 "remote_node_hint" = "To support maximum anonymity set and offline\ntransactions please connect to mobile node\nor own node configured with your owner key.";
 "receive_description_2" = "For online payment to complete, you should get online during 12 hours after coins are sent.";
 "only_online_support" = "You are currently connected to the node\nthat supports only online transactions.";
@@ -677,10 +678,10 @@ and never kept on the blockchain.";
 "beam_faucet" = "Beam Faucet";
 "beam_gallery" = "NFT Gallery";
 "no_search_transactions" = "There are no transactions\nmatching search criteria";
-"calc_estimate_time" = "Calculating estimate time";
+"calc_estimate_time" = "Calculating estimated time";
 "to_completion" = " to completion";
 "to_completion_minute" = "less than a minute to completion";
-
+"no_search_settings" = "There are no results\nmatching search criteria";
 "switch_to_own" = "Switch to own node";
 "switch_to_random" = "Switch to random node";
 "switch_to_mobile" = "Switch to mobile node";
@@ -695,3 +696,4 @@ and never kept on the blockchain.";
 "switch_to_mobile_from_random" = "Are you sure to switch from random node to mobile node?";
 "switch_to_mobile_from_own" = "Are you sure to switch from own node %@ to mobile node?";
 "sw" = "Switch";
+"search_settings" = "Search by section name or parameter";
