--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -615,9 +615,9 @@ and never kept on the blockchain.";
 "remote_node_hint" = "To support maximum anonymity set and offline\ntransactions please connect to mobile node\nor own node configured with your owner key.";
 "receive_description_2" = "For online payment to complete, you should get online during 12 hours after coins are sent.";
 "only_online_support" = "You are currently connected to the node\nthat supports only online transactions.";
-"max_funds_error" = "Insufficient funds to complete the transaction. Maximum amount is %@";
+"max_funds_error" = "Insufficient funds to complete the transaction. Maximum amount is %@.";
 "max_funds_hint" = "Maximum amount is %@";
-"dAppStore" = "DAPP Store";
+"dAppStore" = "My DApp Browser";
 "fee" = "Fee";
 "confirm_accept" = "Confirm";
 "will_take_funds" = "%@ will take the funds from your wallet";
@@ -680,7 +680,7 @@ and never kept on the blockchain.";
 "no_search_transactions" = "There are no transactions\nmatching search criteria";
 "calc_estimate_time" = "Calculating estimated time";
 "to_completion" = " to completion";
-"to_completion_minute" = "less than a minute to completion";
+"to_completion_minute" = "less than a minute";
 "no_search_settings" = "There are no results\nmatching search criteria";
 "switch_to_own" = "Switch to own node";
 "switch_to_random" = "Switch to random node";
@@ -697,3 +697,4 @@ and never kept on the blockchain.";
 "switch_to_mobile_from_own" = "Are you sure to switch from own node %@ to mobile node?";
 "sw" = "Switch";
 "search_settings" = "Search by section name or parameter";
+"beamx_dao_dao_voting" = "BeamX DAO Voting";
