--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -451,7 +451,7 @@ and never kept on the blockchain.";
 "transaction_type" = "Transaction type";
 "type" = "Type";
 "address_type" = "Address type";
-"identity" = "Wallet signature";
+"identity" = "Signature";
 "Address_expiration" = "Address expiration";
 "for_pool" = "For exchange or mining pool";
 "withdraw" = "Withdraw";
@@ -698,3 +698,4 @@ and never kept on the blockchain.";
 "sw" = "Switch";
 "search_settings" = "Search by section name or parameter";
 "beamx_dao_dao_voting" = "BeamX DAO Voting";
+"sbbs_address_new" = "SBBS ADDRESS\n(use for CEX withdrawals)";
